basic grid css containers

--- a/1.Poex Exercise/poem.html
+++ b/1.Poex Exercise/poem.html
@@ -4,47 +4,48 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="poem-style.css">
     <title>Wanlong's Poem</title>
 </head>
 <body>
     <h1 class = "title">THE STAR FORGER</h1>
-    <h2 class = "author">∂єατн ƒяοм ℓονє</h2>
+    <h2 class = "title">∂єατн ƒяοм ℓονє</h2>
 
     <div class="container">
         <div class="grids">
             <div class="poem">
-                Stars, shining so beautiful,
+           <p>Stars, shining so beautiful,
             <br>My creations, those were.
             <br>Everything you see, I created,
-            <br>But suddenly I was, caged.
+            <br>But suddenly I was, caged.</p> 
             </div>
 
             <div class="poem">
-                On a planet with much magic,
-            <br>Those who I made revolted,
-            <br> they made a crown
-            <br>With a deep curse for me.
+            <p>On a planet with much magic,
+                <br>Those who I made revolted,
+                <br> they made a crown
+                <br>With a deep curse for me. </p>
             </div>
 
             <div class="poem">
-                My powers, almost gone.
-            <br>Trust was shattered,
-            <br>Freedom, forgot what it is
-            <br>Solitude took over me like poison.
+             <p>My powers, almost gone.
+                <br>Trust was shattered,
+                <br>Freedom, forgot what it is
+                <br>Solitude took over me like poison.</p>   
             </div>
 
             <div class="poem">
-                As the time passed slowly,
-            <br>Hope began to perish
-            <br>And I stayed there quietly.
-            <br>It was nightmarish to bear the pain.
+            <p>As the time passed slowly,
+                <br>Hope began to perish
+                <br>And I stayed there quietly.
+                <br>It was nightmarish to bear the pain.</p>    
             </div>
 
             <div class="poem">
-                Years went by, and still here I am.
-            <br>No one willing to help me,
-            <br>But I found a new purpose,
-            <br>Trying to break the golden crown.
+            <p>Years went by, and still here I am.
+                <br>No one willing to help me,
+                <br>But I found a new purpose,
+                <br>Trying to break the golden crown.</p>    
             </div>
 
 
