--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <li>
         <ul>
-            <a href="PoemExercise/index.html">Poem</a>
+            <a href="./poem">Poem</a>
         </ul>
     </li>
     
