--- a/classcodeexample/03-29/index.html
+++ b/classcodeexample/03-29/index.html
@@ -12,5 +12,6 @@
       <li class="dot dot_active" id="dot1"></li>
       <li class="dot" id="dot2"></li>
     </ul>
+    <script src="dots.js"></script>
   </body>
 </html>
