--- a/experiment/index.html
+++ b/experiment/index.html
@@ -6,14 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3D tryout</title>
     <script src="https://cdn.babylonjs.com/babylon.js"></script>
-        <script src="https://cdn.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
-        <script src="https://code.jquery.com/pep/0.4.3/pep.js"></script>
-        
+    <script src="https://cdn.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
+    <script src="https://code.jquery.com/pep/0.4.3/pep.js"></script>
+    <script src="script.js"></script>
+
+    <link rel="stylesheet" href="style.css">
+
+
 </head>
 <body>
-    <model-3d background-color="#ffffff" src="/models/panda.glb"></model-3d>
+    <h1>working</h1>
 
     
 
 </body>
+
 </html>
