--- a/experiment/index.html
+++ b/experiment/index.html
@@ -15,11 +15,9 @@
 
 </head>
 <body>
-    <h1>working</h1>
-    <model-3d background-color="#5A1DF5" src="3dmodels/cage.obj"></model-3d>
+    <div class="center">CAGED</div>
 
-    
-
+    <div><model-3d background-color="black" src="3dmodels/cage.obj"></model-3d> </div>
 </body>
 
 </html>
