--- a/experiment/index.html
+++ b/experiment/index.html
@@ -15,9 +15,13 @@
 
 </head>
 <body>
-    <div class="center">CAGED</div>
-
+    <div class="center">LOOK AROUND <br> YOU ARE CAGED</div>
     <div><model-3d background-color="black" src="3dmodels/cage.obj"></model-3d> </div>
 </body>
 
 </html>
+
+<!-- sources: https://medium.com/samsung-internet-dev/adding-3d-models-to-your-website-d374a8cbbadd -->
+<!-- https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise -->
+<!-- https://doc.babylonjs.com/start/chap1/first_app -->
+<!-- https://github.com/SamsungInternet/3D-model -->
