update a-frame site

--- a/experiment/index.html
+++ b/experiment/index.html
@@ -25,3 +25,5 @@
 <!-- https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise -->
 <!-- https://doc.babylonjs.com/start/chap1/first_app -->
 <!-- https://github.com/SamsungInternet/3D-model -->
+
+<!-- A-frame 3D -->
