Link to experiment

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <li>
         <ul>
             <a href="./poem">Poem</a>
+            <a href="./experiment">3D Experiment 1</a>
         </ul>
     </li>
     
