--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <ul>
             <a href="./experiment">3D Experiment 1</a>
         </ul>
+        <ul>
+            <a href="./3Dexperiment/">A-Frame 3D Experiment 2</a>
+        </ul>
     </li>
     
 </body>
