--- a/3Dexperiment/index.html
+++ b/3Dexperiment/index.html
@@ -13,15 +13,17 @@
     <a-scene>
         <a-sky src=""></a-sky>
   
-        <a-box src="" position="-2 0.5 -4"></a-box>
-        <a-sphere src="" radius="0.5" position="0 0.5 -3"></a-sphere>
-        <a-cone src="" height="2" radius-top="0.1" position="0 1 -6"></a-cone>
-        <a-box src="" position="2 0.5 -4"></a-box>
+        <a-box src="" position="-2 0.5 -4" color="#DE461F"></a-box>
+        <a-sphere src="" radius="0.5" position="0 0.5 -3" color="#8BDE1F"></a-sphere>
+        <a-cone src="" height="2" radius-top="0.1" position="0 1 -6" color="#D53BE0"></a-cone>
+        <a-box src="" position="2 0.5 -4" color="#7E8BE0"></a-box>
+        <a-plane src="" rotation="-90 0 0" height="100" width="100" color="#0940DE"></a-plane>
+        <a-text value="HELLO THIS IS MY 3D BATHROOM!" position="-3 3 -5" color="#000000"></a-text>
+        
+        <a-sky src="bath.jpg" radius="30"></a-sky>
   
-        <a-plane src="" rotation="-90 0 0" height="100" width="100"></a-plane>
-  
-        <a-light type="ambient" color="#445451"></a-light>
-        <a-light type="point" intensity="2" position="2 4 4"></a-light>
+        <a-light type="ambient" color="#3846DF"></a-light>
+        <a-light color="#B5B4DE" type="point" intensity="2" position="0 5 0"></a-light>
       </a-scene>
     
 </body>
