--- a/3Dexperiment/index.html
+++ b/3Dexperiment/index.html
@@ -19,6 +19,7 @@
         <a-box src="" position="2 0.5 -4" color="#7E8BE0"></a-box>
         <a-plane src="" rotation="-90 0 0" height="100" width="100" color="#0940DE"></a-plane>
         <a-text value="HELLO THIS IS MY 3D BATHROOM!" position="-3 3 -5" color="#000000"></a-text>
+        <a-sphere src="" radius="0.5" position="0 2 -6" color="#8BDE1F" material="emissive: #ff40ff; emissiveIntensity: 0.39; fog: false; height: 20; metalness: 0.32; metalnessTextureOffset: 0.54 -1.51; metalnessTextureRepeat: 1.46 1.6; width: 511.44" geometry="" text__name="I WANT A BALL"></a-sphere>
         
         <a-sky src="bath.jpg" radius="30"></a-sky>
   
