--- a/3D-ROOM/index.html
+++ b/3D-ROOM/index.html
@@ -30,7 +30,7 @@
       <a-scene>
         <a-entity environment="lightPosition: 1 5 -2; groundColor: #445"></a-entity>
         <a-plane src="" rotation="-90 0 0" height="100" width="100" color="#0940DE"></a-plane>
-		<!-- <rw-room position="-2 0 -2" material="color:#866">
+		<rw-room position="-2 0 -2" material="color:#866">
 			<rw-wall position="4 0 0"></rw-wall>
 			<rw-wall position="4 0 4"></rw-wall>
 			<rw-wall position="0 0 4"></rw-wall>
@@ -38,15 +38,15 @@
 		  		<rw-doorhole id="holeA"></rw-doorhole>
 		  		<rw-doorlink from="#holeA" to="#holeB" position="2.5 0 0"></rw-doorlink>
 			</rw-wall>
-		</rw-room> -->
-		<rw-room position="0 0 -3">
+		</rw-room>
+		<!-- <rw-room position="0 0 -3">
 			<rw-wall position=" 1 0 -1" material="color:#787"></rw-wall>
 			<rw-wall position=" 1 0  1" material="color:#877">
 				<rw-doorhole id="holeB"></rw-doorhole>
 			</rw-wall>
 			<rw-wall position="-1 0  1" material="color:#878"></rw-wall>
 			<rw-wall position="-1 0 -1" material="color:#778"></rw-wall>
-		</rw-room>
+		</rw-room> -->
 	</a-scene>
 </body>
 </html>
