--- a/3D-ROOM/index.html
+++ b/3D-ROOM/index.html
@@ -19,21 +19,24 @@
         <a-assets>
             <a-mixin id="floorMat" material="color:#BBB"></a-mixin>
 
-            <a-asset-item id="test-obj" src="asset/Twister.obj"></a-asset-item>
-            <a-asset-item id="test-mtl" src="asset/Gunda.mtl"></a-asset-item>
             <a-asset-item id="gunda-obj" src="asset/Gunda.obj"></a-asset-item>
             <a-asset-item id="gunda-mtl" src="asset/Gunda.mtl"></a-asset-item>
+            <a-asset-item id="Pond-obj" src="asset/Pond.obj"></a-asset-item>
+            <a-asset-item id="Pond-mtl" src="asset/Pond.png"></a-asset-item>
+            <a-asset-item id="Piano-obj" src="asset/Piano.obj"></a-asset-item>
+            <a-asset-item id="Piano-mtl" src="asset/Piano.mtl"></a-asset-item>
         </a-assets>
 
         <!-- room set up -->
         <a-entity environment="lightPosition: 1 5 -2; groundColor: #445"></a-entity>
         <a-light type="directional" intensity="0.9" position="-1 -2  2"></a-light>
-        <!-- <a-plane src="" rotation="-90 0 0" height="100" width="100" color="#0940DE"></a-plane> -->
+        <a-plane src="" rotation="-90 0 0" height="100" width="100" color="#0940DE"></a-plane>
 		<rw-room position="-2 0 -2" material="color:#866" height="10">
 			<rw-wall position="10 0 0"></rw-wall>
 			<rw-wall position="10 0 10" ></rw-wall>
 			<rw-wall position="0 0 10" ></rw-wall>
 			<rw-wall position="0 0 0"></rw-wall>
+            
             <rw-ceiling position="0 0 0"></rw-ceiling>
             <rw-floor mixin="floorMat"></rw-floor>
 		</rw-room>
@@ -47,8 +50,9 @@
 		</rw-room>
 
         <!-- objects -->
-        <a-entity obj-model="obj: #test-obj; mtl: #test-mtl" position = "0.5 0.5 -2" scale = " 0.01 0.01 0.01" ></a-entity>
+        <a-entity obj-model="obj: #Pond-obj; mtl: #Pond-mtl" position = "6 0 -1" scale = " 2 2 2" ></a-entity>
         <a-entity obj-model="obj: #gunda-obj; mtl: #gunda-mtl" position = "0 10 -30" scale = "6 6 6" rotation ="0 180 0" ></a-entity>
+        <a-entity obj-model="obj: #Piano-obj; mtl: #Piano-mtl" position = "0 0.7 0" scale = "0.5 0.5 0.5" rotation ="0 -45 0" ></a-entity>
 	</a-scene>
 </body>
 </html>
