--- a/3D-ROOM/index.html
+++ b/3D-ROOM/index.html
@@ -17,12 +17,13 @@
     <a-scene>
         <!-- assets -->
         <a-assets>
-            <a-mixin id="floorMat" material="color:#BBB"></a-mixin>
+            <img id="boxTexture" src="asset/cube.jpg">
+            <img id="groundTexture" src="asset/floor-tex.jpg">
 
             <a-asset-item id="gunda-obj" src="asset/Gunda.obj"></a-asset-item>
             <a-asset-item id="gunda-mtl" src="asset/Gunda.mtl"></a-asset-item>
             <a-asset-item id="Pond-obj" src="asset/Pond.obj"></a-asset-item>
-            <a-asset-item id="Pond-mtl" src="asset/Pond.png"></a-asset-item>
+            <a-asset-item id="Pond-mtl" src="asset/Pond.mtl"></a-asset-item>
             <a-asset-item id="Piano-obj" src="asset/Piano.obj"></a-asset-item>
             <a-asset-item id="Piano-mtl" src="asset/Piano.mtl"></a-asset-item>
         </a-assets>
@@ -30,27 +31,19 @@
         <!-- room set up -->
         <a-entity environment="lightPosition: 1 5 -2; groundColor: #445"></a-entity>
         <a-light type="directional" intensity="0.9" position="-1 -2  2"></a-light>
-        <a-plane src="" rotation="-90 0 0" height="100" width="100" color="#0940DE"></a-plane>
+        <a-plane src="#groundTexture" rotation="-90 0 0" height="10" width="10" position="3 0 3"></a-plane>
 		<rw-room position="-2 0 -2" material="color:#866" height="10">
 			<rw-wall position="10 0 0"></rw-wall>
 			<rw-wall position="10 0 10" ></rw-wall>
 			<rw-wall position="0 0 10" ></rw-wall>
 			<rw-wall position="0 0 0"></rw-wall>
-            
             <rw-ceiling position="0 0 0"></rw-ceiling>
-            <rw-floor mixin="floorMat"></rw-floor>
-		</rw-room>
-		<rw-room position="0 0 -3">
-			<rw-wall position=" 1 0 -1" material="color:#787"></rw-wall>
-			<rw-wall position=" 1 0  1" material="color:#877">
-				<rw-doorhole id="holeB"></rw-doorhole>
-			</rw-wall>
-			<rw-wall position="-1 0  1" material="color:#878"></rw-wall>
-			<rw-wall position="-1 0 -1" material="color:#778"></rw-wall>
 		</rw-room>
 
         <!-- objects -->
-        <a-entity obj-model="obj: #Pond-obj; mtl: #Pond-mtl" position = "6 0 -1" scale = " 2 2 2" ></a-entity>
+        <a-box src="#boxTexture" position="2 4 -0.5" rotation="0 45 45" scale="2 2 2"
+         animation="property: object3D.position.y; to: 4.6; dir: alternate; dur: 2000; loop: true"></a-box>
+        <a-entity obj-model="obj: #Pond-obj; mtl: #Pond-mtl" position = "5.6 0.3 0" scale = " 2 2 2" ></a-entity>
         <a-entity obj-model="obj: #gunda-obj; mtl: #gunda-mtl" position = "0 10 -30" scale = "6 6 6" rotation ="0 180 0" ></a-entity>
         <a-entity obj-model="obj: #Piano-obj; mtl: #Piano-mtl" position = "0 0.7 0" scale = "0.5 0.5 0.5" rotation ="0 -45 0" ></a-entity>
 	</a-scene>
