--- a/3D-ROOM/index.html
+++ b/3D-ROOM/index.html
@@ -22,10 +22,10 @@
 
             <a-asset-item id="gunda-obj" src="asset/Gunda.obj"></a-asset-item>
             <a-asset-item id="gunda-mtl" src="asset/Gunda.mtl"></a-asset-item>
-            <a-asset-item id="Pond-obj" src="asset/Pond.obj"></a-asset-item>
-            <a-asset-item id="Pond-mtl" src="asset/Pond.mtl"></a-asset-item>
             <a-asset-item id="Piano-obj" src="asset/Piano.obj"></a-asset-item>
             <a-asset-item id="Piano-mtl" src="asset/Piano.mtl"></a-asset-item>
+            <a-asset-item id="fox-obj" src="asset/fox.obj"></a-asset-item>
+            <a-asset-item id="fox-mtl" src="asset/fox.mtl"></a-asset-item>
         </a-assets>
 
         <!-- room set up -->
@@ -43,9 +43,9 @@
         <!-- objects -->
         <a-box src="#boxTexture" position="2 4 -0.5" rotation="0 45 45" scale="2 2 2"
          animation="property: object3D.position.y; to: 4.6; dir: alternate; dur: 2000; loop: true"></a-box>
-        <a-entity obj-model="obj: #Pond-obj; mtl: #Pond-mtl" position = "5.6 0.3 0" scale = " 2 2 2" ></a-entity>
         <a-entity obj-model="obj: #gunda-obj; mtl: #gunda-mtl" position = "0 10 -30" scale = "6 6 6" rotation ="0 180 0" ></a-entity>
         <a-entity obj-model="obj: #Piano-obj; mtl: #Piano-mtl" position = "0 0.7 0" scale = "0.5 0.5 0.5" rotation ="0 -45 0" ></a-entity>
+        <a-entity obj-model="obj: #fox-obj; mtl: #fox-mtl" position = "6 1.5 0" scale = "0.5 0.5 0.5" rotation ="0 -180 0" ></a-entity>
 	</a-scene>
 </body>
 </html>
