--- a/3D-ROOM/index.html
+++ b/3D-ROOM/index.html
@@ -29,6 +29,7 @@
         </a-assets>
 
         <!-- room set up -->
+        <a-entity camera look-controls wasd-controls position="3 1.6 5"></a-entity>
         <a-entity environment="lightPosition: 1 5 -2; groundColor: #445"></a-entity>
         <a-light type="directional" intensity="0.9" position="-1 -2  2"></a-light>
         <a-plane src="#groundTexture" rotation="-90 0 0" height="10" width="10" position="3 0 3"></a-plane>
@@ -45,7 +46,7 @@
          animation="property: object3D.position.y; to: 4.6; dir: alternate; dur: 2000; loop: true"></a-box>
         <a-entity obj-model="obj: #gunda-obj; mtl: #gunda-mtl" position = "0 10 -30" scale = "6 6 6" rotation ="0 180 0" ></a-entity>
         <a-entity obj-model="obj: #Piano-obj; mtl: #Piano-mtl" position = "0 0.7 0" scale = "0.5 0.5 0.5" rotation ="0 -45 0" ></a-entity>
-        <a-entity obj-model="obj: #fox-obj; mtl: #fox-mtl" position = "6 1.5 0" scale = "0.5 0.5 0.5" rotation ="0 -180 0" ></a-entity>
+        <a-entity obj-model="obj: #fox-obj; mtl: #fox-mtl" position = "6 2 0" scale = "0.7 0.7 0.7" rotation ="0 -215 0" ></a-entity>
 	</a-scene>
 </body>
 </html>
