--- a/3D-ROOM/index.html
+++ b/3D-ROOM/index.html
@@ -26,12 +26,20 @@
             <a-asset-item id="Piano-mtl" src="asset/Piano.mtl"></a-asset-item>
             <a-asset-item id="fox-obj" src="asset/fox.obj"></a-asset-item>
             <a-asset-item id="fox-mtl" src="asset/fox.mtl"></a-asset-item>
+            <a-asset-item id="stool-obj" src="asset/Stool.obj"></a-asset-item>
+            <a-asset-item id="stool-mtl" src="asset/Stool.mtl"></a-asset-item>
+            <a-asset-item id="Sofa-obj" src="asset/Sofa.obj"></a-asset-item>
+            <a-asset-item id="Sofa-mtl" src="asset/Sofa.mtl"></a-asset-item>
+            <a-asset-item id="Geisha-obj" src="asset/Geisha.obj"></a-asset-item>
+            <a-asset-item id="Geisha-mtl" src="asset/Geisha.mtl"></a-asset-item>
         </a-assets>
+
+        <!-- lights -->
+        <a-light type="directional" intensity="0.8" position="-1 -4  2" color="#F777E8"></a-light>
 
         <!-- room set up -->
         <a-entity camera look-controls wasd-controls position="3 1.6 5"></a-entity>
         <a-entity environment="lightPosition: 1 5 -2; groundColor: #445"></a-entity>
-        <a-light type="directional" intensity="0.9" position="-1 -2  2"></a-light>
         <a-plane src="#groundTexture" rotation="-90 0 0" height="10" width="10" position="3 0 3"></a-plane>
 		<rw-room position="-2 0 -2" material="color:#866" height="10">
 			<rw-wall position="10 0 0"></rw-wall>
@@ -44,9 +52,12 @@
         <!-- objects -->
         <a-box src="#boxTexture" position="2 5 -0.5" rotation="0 45 45" scale="2 2 2"
          animation="property: object3D.position.y; to: 5.6; dir: alternate; dur: 2000; loop: true"></a-box>
+        <a-entity obj-model="obj: #Geisha-obj; mtl: #Geisha-mtl" position = "3 11 3.5" scale = "0.05 0.05 0.05" rotation ="90 0 0"></a-entity>
         <a-entity obj-model="obj: #gunda-obj; mtl: #gunda-mtl" position = "0 10 -30" scale = "6 6 6" rotation ="0 180 0" ></a-entity>
         <a-entity obj-model="obj: #Piano-obj; mtl: #Piano-mtl" position = "1 1.3 0" scale = "1 1 1" rotation ="0 -45 0" ></a-entity>
         <a-entity obj-model="obj: #fox-obj; mtl: #fox-mtl" position = "5.5 2 1" scale = "0.7 0.7 0.7" rotation ="0 -215 0" ></a-entity>
+        <a-entity obj-model="obj: #stool-obj; mtl: #stool-mtl" position = "2 0 1.5" scale = "0.005 0.005 0.005" rotation ="-90 0 0" ></a-entity>
+        <a-entity obj-model="obj: #Sofa-obj; mtl: #Sofa-mtl" position = "1 0 1" scale = "0.05 0.05 0.05" rotation ="0 0 0" ></a-entity>
 	</a-scene>
 </body>
 </html>
