--- a/3D-ROOM/index.html
+++ b/3D-ROOM/index.html
@@ -28,14 +28,17 @@
             <a-asset-item id="fox-mtl" src="asset/fox.mtl"></a-asset-item>
             <a-asset-item id="stool-obj" src="asset/Stool.obj"></a-asset-item>
             <a-asset-item id="stool-mtl" src="asset/Stool.mtl"></a-asset-item>
-            <a-asset-item id="Sofa-obj" src="asset/Sofa.obj"></a-asset-item>
-            <a-asset-item id="Sofa-mtl" src="asset/Sofa.mtl"></a-asset-item>
+            <a-asset-item id="Bed-obj" src="asset/Bed.obj"></a-asset-item>
+            <a-asset-item id="Bed-mtl" src="asset/Bed.mtl"></a-asset-item>
             <a-asset-item id="Geisha-obj" src="asset/Geisha.obj"></a-asset-item>
             <a-asset-item id="Geisha-mtl" src="asset/Geisha.mtl"></a-asset-item>
+            <a-asset-item id="Bath-obj" src="asset/Bath.obj"></a-asset-item>
+            <a-asset-item id="Bath-mtl" src="asset/Bath.mtl"></a-asset-item>
         </a-assets>
 
         <!-- lights -->
         <a-light type="directional" intensity="0.8" position="-1 -4  2" color="#F777E8"></a-light>
+        <a-entity light="type: ambient; color: #CCC"></a-entity>
 
         <!-- room set up -->
         <a-entity camera look-controls wasd-controls position="3 1.6 5"></a-entity>
@@ -52,12 +55,14 @@
         <!-- objects -->
         <a-box src="#boxTexture" position="2 5 -0.5" rotation="0 45 45" scale="2 2 2"
          animation="property: object3D.position.y; to: 5.6; dir: alternate; dur: 2000; loop: true"></a-box>
-        <a-entity obj-model="obj: #Geisha-obj; mtl: #Geisha-mtl" position = "3 11 3.5" scale = "0.05 0.05 0.05" rotation ="90 0 0"></a-entity>
+        <a-entity obj-model="obj: #Geisha-obj; mtl: #Geisha-mtl" position = "3 11 3.5" scale = "0.05 0.05 0.05" rotation ="90 0 0"
+        animation="property: object3D.rotation.z; to: 720; dir: alternate; dur: 20000; loop: true"></a-entity>
         <a-entity obj-model="obj: #gunda-obj; mtl: #gunda-mtl" position = "0 10 -30" scale = "6 6 6" rotation ="0 180 0" ></a-entity>
         <a-entity obj-model="obj: #Piano-obj; mtl: #Piano-mtl" position = "1 1.3 0" scale = "1 1 1" rotation ="0 -45 0" ></a-entity>
         <a-entity obj-model="obj: #fox-obj; mtl: #fox-mtl" position = "5.5 2 1" scale = "0.7 0.7 0.7" rotation ="0 -215 0" ></a-entity>
         <a-entity obj-model="obj: #stool-obj; mtl: #stool-mtl" position = "2 0 1.5" scale = "0.005 0.005 0.005" rotation ="-90 0 0" ></a-entity>
-        <a-entity obj-model="obj: #Sofa-obj; mtl: #Sofa-mtl" position = "1 0 1" scale = "0.05 0.05 0.05" rotation ="0 0 0" ></a-entity>
+        <a-entity obj-model="obj: #Bed-obj; mtl: #Bed-mtl" position = "6.3 0.5 1.8" scale = "0.15 0.15 0.15" rotation ="0 0 0" ></a-entity>
+        <a-entity obj-model="obj: #Bath-obj; mtl: #Bath-mtl" position = "0.01 0 6" scale = "0.08 0.08 0.08" rotation ="0 90 0" ></a-entity>
 	</a-scene>
 </body>
 </html>
