added more lights

--- a/3D-ROOM/index.html
+++ b/3D-ROOM/index.html
@@ -38,7 +38,8 @@
 
         <!-- lights -->
         <a-light type="directional" intensity="0.8" position="-1 -4  2" color="#F777E8"></a-light>
-        <a-entity light="type: ambient; color: #CCC"></a-entity>
+        <a-entity light="type: hemisphere; color: #55CEFA; groundColor: #FAF09D; intensity: 0.3"></a-entity>
+
 
         <!-- room set up -->
         <a-entity camera look-controls wasd-controls position="3 1.6 5"></a-entity>
