--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         <ul>
             <a href="./3Dexperiment/">A-Frame 3D Experiment 2</a>
         </ul>
+        ul>
+            <a href="./3D-ROOM/">A-Frame 3D Room Creation</a>
+        </ul>
     </li>
     
 </body>
