--- a/3D-ROOM/index.html
+++ b/3D-ROOM/index.html
@@ -11,7 +11,7 @@
     <script src="https://unpkg.com/aframe-environment-component@1.1.0/dist/aframe-environment-component.min.js"></script>
 </head>
 <body>
-    <h1>Working?</h1>
+    <h1>Loading....</h1>
     <!-- how to use a-frame watcher? http://supermedium.com/aframe-watcher/ -->
 
     <a-scene>
